--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,17 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%= stylesheet_link_tag "application", media: "all" %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
   </head>
 
   <body>
-    <%= yield %>
+    <%= render "shared/header" %>
+    <main class="container">
+      <%= yield %>
+    </main>
+    <%= render "shared/footer" %>
   </body>
 </html>
+
+<!-- app/views/wineries/index.html.erb -->
