style: update font for English text to Playfair Display

--- a/app/views/wineries/index.html.erb
+++ b/app/views/wineries/index.html.erb
@@ -11,7 +11,7 @@
       <select name="grape_variety"><option>ブドウの品種</option></select>
       <select name="wine_style"><option>ワインの種類</option></select>
       <select name="awards"><option>受賞歴</option></select>
-      <select name="experience"><option>体験></select>
+      <select name="experience"><option>体験</select>
       <select name="dining"><option>食事</option></select>
       <select name="area"><option>地域</option></select>
       <select name="tasting"><option>試飲</option></select>
