--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,6 +9,10 @@ body {
   padding: 0;
 }
 
+.eng-font {
+  font-family: 'Playfair Display', serif;
+}
+
 .hero {
   display: flex;
   flex-direction: row;
