Implement multi-filter search for wineries with distinct results

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,7 @@
 <!-- app/views/shared/_header.html.erb -->
 <header class='top-page-header'>
   <h1>Wainavi</h1>
+  <h3>ワイナリーの旅、ここから始まる</h3>
   <div class ='navigation'>
         <ul class='lists-right'>
       <li><%= link_to 'ログイン', '#', class: "login" %></li>
