--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <!-- app/views/shared/_header.html.erb -->
 <header class='top-page-header'>
-  <h1>Wainavi</h1>
+  <h1><%= link_to "Wainavi", root_path, class: "site-title-link" %></h1>
   <h3>ワイナリーの旅、ここから始まる</h3>
   <div class ='navigation'>
         <ul class='lists-right'>
