Implement user registration and login with username support

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
 <!-- app/views/shared/_footer.html.erb -->
 <footer>
-  <p>&copy; 2025 Wainavi</p>
+  <p class ="copyright-mark">&copy; 2025 Wainavi</p>
 </footer>
