--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -97,6 +97,19 @@ body {
   font-weight: bold;
 }
 
+.logout-button {
+  width: 100px;
+  padding: 10px;
+  font-size: 14px;
+  border-radius: 0;
+  text-align: center;
+  text-decoration: none;
+  border: 2px solid #000;
+  background-color: whitesmoke;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+
 .filters-heading {
   text-align: center;
   margin-bottom: 20px;
@@ -242,4 +255,12 @@ body {
   background-color: #111;
   color: white;
   border-color: #111;
+}
+
+.form-wrapper {
+  margin-left: 2cm;
+}
+
+.copyright-mark {
+  margin-left: 2cm;
 }
