--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,10 +2,18 @@
 <header class='top-page-header'>
   <h1><%= link_to "Wainavi", root_path, class: "site-title-link" %></h1>
   <h3>ワイナリーの旅、ここから始まる</h3>
-  <div class ='navigation'>
-        <ul class='lists-right'>
-      <li><%= link_to 'ログイン', '#', class: "login" %></li>
-      <li><%= link_to '新規登録', '#', class: "sign-up" %></li>
+  <div class='navigation'>
+    <ul class='lists-right'>
+      <% if user_signed_in? %>
+        <li><%= link_to "ようこそ,  #{current_user.username} さん", '#' %></li>
+        <li>
+          <%= button_to 'ログアウト', destroy_user_session_path, method: :delete,
+                        form_class: 'logout-form', class: 'logout-button' %>
+        </li>
+      <% else %>
+        <li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li>
+        <li><%= link_to '新規登録', new_user_registration_path, class: "sign-up" %></li>
+      <% end %>
     </ul>
   </div>
 </header>
