Add saved wineries functionality and user mypage link

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,9 +6,10 @@
     <ul class='lists-right'>
       <% if user_signed_in? %>
         <li><%= link_to "ようこそ,  #{current_user.username} さん", '#' %></li>
+        <li><%= link_to "マイページ", my_wineries_path, class: "mypage-link" %></li>
         <li>
           <%= button_to 'ログアウト', destroy_user_session_path, method: :delete,
-                        form_class: 'logout-form', class: 'logout-button' %>
+                        form_class: 'logout-form', class: 'button-outline button-white' %>
         </li>
       <% else %>
         <li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li>
