--- a/app/views/wineries/index.html.erb
+++ b/app/views/wineries/index.html.erb
@@ -72,7 +72,7 @@
     </div>
 <div class="filter-buttons">
   <%= submit_tag "検索", class: "search-button" %>
-  <%= link_to "リセット", wineries_path, method: :get, class: "reset-button" %>
+  <%= link_to "リセット", wineries_path, method: :get, class: "button-white" %>
 </div>
     <% end %>
 </section>
@@ -83,7 +83,15 @@
       <h2>
         <%= link_to (winery.title.presence || "名称未設定"), winery_path(winery) %>
       </h2>
-
+       <% if user_signed_in? %>
+       <% if current_user.saved_wineries.exists?(winery: winery) %>
+       <%= button_to '★ 保存済み', winery_saved_winery_path(winery), method: :delete, class: 'button-white' %>
+       <% else %>
+       <%= button_to '♡ 保存', winery_saved_winery_path(winery), method: :post, class: 'button-white' %>
+       <% end %>
+       <% else %>
+      <%= link_to '♡ ログインして保存', new_user_session_path, class: "login-save-button" %>
+      <% end %>
       <p><strong>地域:</strong> <%= winery.wine_region&.name || "未設定" %></p>
 
       <p><strong>ブドウの品種:</strong>
